'fix cover text tile overflow'

--- a/app/assets/stylesheets/globals/exhibits.css.scss
+++ b/app/assets/stylesheets/globals/exhibits.css.scss
@@ -518,7 +518,7 @@ a.exhibit-records:link, a.exhibit-records:visited, a.exhibit-records-section:lin
   bottom: 0;
   text-align: center;
   width: 90%;
-  height:33%;
+  height:38%;
   padding: 5%;
   color: #fff;
   opacity: 0.3;
@@ -530,7 +530,7 @@ a.exhibit-records:link, a.exhibit-records:visited, a.exhibit-records-section:lin
   bottom: 0;
   text-align: center;
   width: 90%;
-  height:33%;
+  height:38%;
   padding: 5%;
   color: #fff;
 }
